apps/prod/rbx-ia-br/svc.yml
# Service: rbx.ia.br
apiVersion: v1
kind: Service
metadata:
  name: rbx-ia-br-svc
  namespace: rbx-ia-br
  labels:
    app.kubernetes.io/name: rbx-ia-br-svc
    app.kubernetes.io/part-of: rbx-ia-br
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: rbx-ia-br
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
